# Python-WEB-7

./: config.ini  my_select.py  pyproject.toml  seed.py
migrations/versions/: c61b7ea49db6_init.py
src/: models.py
